Fix paragraph spacing in previews

--- a/app/assets/stylesheets/pages/solution-page.scss
+++ b/app/assets/stylesheets/pages/solution-page.scss
@@ -104,6 +104,7 @@ body.controller-solutions.action-show {
         .post, .preview-area {
             p {
                 @include font-size(14, 20);
+                margin-bottom:10px;
             }
             blockquote {
                 border-left: 4px solid #eee;
